# ConsoleCraftEditor

./: .gitignore  .gitmodules  CMakeLists.txt  ComponentScripts.json  GameObjectScripts.json  LICENSE  README.md  imgui.ini
Engine/Source/Core/: Camera.cpp  Camera.h  DataStructs.h  GameObject.h  Scene.cpp  Scene.h  imgui.ini
Engine/Source/Core/AI/: AIMovement.h
Engine/Source/Core/AIBehavior/: ActionNode.h  BehaviorTree.cpp  BehaviorTree.h  CompositeNode.h  NodeBase.h  Selector.h  SuccessNode.h
Engine/Source/Core/Component/: DestructionEffectComponent.h  PlayerController.cpp  PlayerController.h  RigidbodyComponent.cpp  RigidbodyComponent.h  SpringComponent.h  imgui.ini
Engine/Source/Core/ParticleSystem/: BlastParticle.h  ParticleObject.cpp  ParticleObject.h  ParticleSource.cpp  ParticleSource.h  StaticBlastParticle.h  WaveParticle.cpp
Engine/Source/Core/Physics/: CollisionResolver.cpp  CollisionResolver.h  JointRenderer.cpp  Raycaster.cpp  Raycaster.h  Rope.h  RopeParticle.h
Engine/Source/Core/Scripting/: BehaviorTreeDeserializer.cpp  BehaviorTreeDeserializer.h  BehaviorTreeSerializer.cpp  BehaviorTreeSerializer.h  SceneDataDeserializer.cpp  (+3 more)
Source/: imgui.ini  main.cpp  window.cpp  window.h
Source/Core/: BehaviorTreeRenderer.cpp  BehaviorTreeRenderer.h  GameObjectPropertiesRenderer.h  InEditorRenderer.cpp  InEditorRenderer.h  ProjectManager.cpp  ProjectManager.h  imgui.ini
Source/Core/FileHandling/: BehaviorTreeSerializer.cpp  BehaviorTreeSerializer.h  ComponentScriptCreator.h  Directories.h  FileHandler.cpp  FileHandler.h  GameObjectScriptCreator.h  ProjectCreator.h  SceneDataSerializer.cpp  SceneDataSerializer.h
(+23 files in other folders)
